# travel-ds

./: .gitignore  README.md  setup.cfg
travelds/: __init__.py  __main__.py  apps.py  constants.py  exceptions.py  settings.example.py  utils.py
travelds/console/: __init__.py  entry_point.py  travelds.py  traveletl.py
travelds/etl/: __init__.py
travelds/etl/models/: __init__.py  agoda.py  expedia.py  hotels.py
travelds/parsers/: __init__.py  ds_parser.py  etl_parser.py
travelds/proxies/: __init__.py  proxy.py
travelds/proxies/base/: __init__.py
travelds/proxies/spysme/: __init__.py
travelds/scrapers/: __init__.py  scraper.py
travelds/scrapers/agoda/: __init__.py  constants.py  scraper.py
travelds/scrapers/agoda/graphql/: __init__.py  search.py
travelds/scrapers/base/: __init__.py  scraper.py
travelds/scrapers/booking/: constants.py  scraper.py
travelds/scrapers/expedia/: __init__.py  constants.py  scraper.py
travelds/scrapers/expedia/graphql/: __init__.py  listing.py  search.py
travelds/scrapers/hotels/: __init__.py  constants.py  scraper.py
travelds/scrapers/hotels/graphql/: __init__.py  listing.py  search.py
travelds/scrapers/trip/: constants.py  scraper.py
