[metadata]
version = 1.0.0

name = travelds
url = https://github.com/xnetcat/travelds
download_url = https://pypi.org/project/travelds
author = xnetcat
author_email = xnetcat.dev@gmail.com
license = MIT
description = Scrape various websites for travel information
long_description = file:README.md
long_description_content_type = text/markdown
keywords = travel data scraping scraper python beautifulsoup4
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
include_package_data = true
install_requires =
    beautifulsoup4
    requests
    django
    mysqlclient
python_requires = >=3.8

[options.entry_points]
console_scripts=
    travel-ds = travelds:travelds_console
    travel-etl = travelds:traveletl_console
